--- a/table 1.html
+++ b/table 1.html
@@ -21,7 +21,7 @@
           <td></td>
         </tr>
       </table>
-      <button id="add-column" class="button" type="button">+</button>
+      <button id="add-column" class="button" type="button">-+</button>
     </div>
     <button id="add-row" class="button" type="button">+</button>
   </div>
