some improve of cube

--- a/table.html
+++ b/table.html
@@ -5,26 +5,23 @@
   <title>table</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <div class="flex">
-    <button id="delete-column" class="button" type="button">-</button>
+  <button id="delete-column" type="button">-</button>
     <div class="row">
-      <button id="delete-row" class="button" type="button">-</button>
-      <table id="table" class="table">
-        <tr>
-          <th></th>
-          <th></th>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-        </tr>
-      </table>
-      <button id="add-column" class="button" type="button">+</button>
+  <button id="delete-row" type="button">-</button>
+  <table id="table" class="table">
+    <tr>
+      <th></th>
+      <th></th>
+    </tr>  
+    <tr>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
+  <button id="add-column" type="button">+</button>
     </div>
-    <button id="add-row" class="button" type="button">+</button>
-  </div>
+  <button id="add-row" type="button">+</button>
 <script src="js.js"></script>
 </body>
 
